_sass/_band.scss
.post-content .band-members {
    display: inline-block;
    margin: $spacing-unit;
    margin-top: 0;
    float: right;
    width: 305px;

    @include media-query($on-laptop) {
        width: 100%;
        float: none;
        .band-member {
            float: left;
            width: 300px;
        }
    }


    .band-member {
         @extend %clearfix;

        .image-box {
            float : left;
            img {
                display: block;
                margin: auto;
            }
        }

        .band-member-meta {
            padding-top: $spacing-unit / 2;
            .band-member-name {
                display: block;
                font-size: 24px;
            }
            .band-member-role {
                display: block;
            }
            .band-member-description {
                margin-top: $spacing-unit / 2;
                display: block;
                font-size: $small-font-size;
            }
        }
    }

    .band-member:last-child {
        border-bottom: 0;
    }
}

/* make sure the space before the  title for "Gruendigsgschicht" isn't
   cleared, and the band members are on the left on the desktop */
.page-content .post-content h2:before {
    display: block;
    clear: none;
}

